CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( PROJ_NAME      "mpeg2-tm" )
SET( PROJ_PATH      ${CMAKE_SOURCE_DIR} )
SET( PROJ_OUT_PATH  ${CMAKE_BINARY_DIR} )
SET( PROJ_SOURCES   "" )
FILE( GLOB_RECURSE PROJ_SOURCES src/*.cpp )
SET( PROJ_HEADERS   "" )
FILE( GLOB_RECURSE PROJ_HEADERS include/*.h )
SET( PROJ_LIBRARIES "" )
SET( PROJ_INCLUDES  "include" )

PROJECT( ${PROJ_NAME} )

INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
ADD_LIBRARY (${PROJ_NAME} ${PROJ_SOURCES})

# TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )

set(CMAKE_CXX_FLAGS "-g -Wall")
